--- a/exercises/13-image-with-text/index.html
+++ b/exercises/13-image-with-text/index.html
@@ -4,7 +4,16 @@
 		<title>4Geeks Academy</title>
 	</head>
 	<body>
-		<!-- your code here -->
-		
+		<table border="0">
+			<tr>
+				<td width="25%" width="100%"><img src="../../.learn/assets/13-images-with-text.jpg" /></td>
+				<td valign="top">
+					Where can I get some? There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+					some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of
+					Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on
+					the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.
+				</td>
+			</tr>
+		</table>
 	</body>
 </html>
